tests/paczka2/big_fuzzy/95132627.err
Error in line 1: iPWL S284 24,7
Error in line 6: InLkbsSMog A409 83,43
Error in line 4: BtTl5aARwdU A276 43,1
Error in line 9: InLkbsSMog A409 86,6
Error in line 15: iPWL A276 -2,9
Error in line 14: InLkbsSMog S284 12,8
Error in line 17: InLkbsSMog A293 18,9
Error in line 20: BtTl5aARwdU A276 21,8
Error in line 36: InLkbsSMog A293 21,2
Error in line 28: BtTl5aARwdU A293 59,3
Error in line 41: InLkbsSMog A409 32,0
Error in line 46: InLkbsSMog A276 14,9
Error in line 43: BtTl5aARwdU A276 53,8
Error in line 48: kNmjKCe S284 66,8
Error in line 53: kNmjKCe A293 35,7
Error in line 52: p2wwbYukx S284 3,3
Error in line 71: A409 S284 51,6
Error in line 79: BtTl5aARwdU A276 90,2
Error in line 64: Qwa S284 996,5
Error in line 98: InLkbsSMog S284 7,6
Error in line 102: BtTl5aARwdU A409 26,2
Error in line 109: iPWL A276 78,5
Error in line 113: iPWL S284 26,6
Error in line 117: iPWL A293 -1,5
Error in line 114: iPWL A293 13,0
Error in line 118: A409 S284 96,6
Error in line 78: p2wwbYukx A409 42,9
Error in line 124: BtTl5aARwdU S284 69,5
Error in line 126: p2wwbYukx S284 38,3
Error in line 144: iPWL A409 97,9
Error in line 157: Qwa S284 S4,1
Error in line 154: kNmjKCe A293 18,3
Error in line 162: Qwa S284 112,82
Error in line 93: Qwa A409 320,7
Error in line 155: iPWL S284 81,4
Error in line 107: InLkbsSMog A409 64,1
Error in line 177: A409 A293 254,8
Error in line 182: InLkbsSMog A276 26,8
Error in line 199: p2wwbYukx S284 11,05
Error in line 187: kNmjKCe A409 66,9
Error in line 235: kNmjKCe A409 106,57
Error in line 229: p2wwbYukx A276 45,8
